test/files/neg/macro-bundle-class.check
macro-bundle-class.scala:10: error: macro bundles must be monomorphic traits extending either BlackboxMacro or WhiteboxMacro and not implementing their `val c: BlackboxContext/WhiteboxContext` member
  def foo = macro Bundle.impl
                  ^
one error found
